# h9

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h.in  h9_log.c  h9_log.h  h9_msg.c  h9_msg.h  h9_slcan.c  h9_slcan.h  h9_xmlmsg.c  h9_xmlmsg.h  h9_xmlsocket.c  h9_xmlsocket.h  h9d.c  h9d.cfg  h9d_cfg.c  h9d_cfg.h  h9d_client.c  h9d_client.h  h9d_client_module.c  h9d_client_module.h  h9d_endpoint.c  h9d_endpoint.h  h9d_metricses.c  h9d_metricses.h  h9d_select_event.c  h9d_select_event.h  h9d_server.c  h9d_server.h  h9d_server_module.c  h9d_server_module.h  h9d_trigger.c  h9d_trigger.h  h9fupgrade.c  h9fw.c  h9msg.c  h9msg.h  h9msg.xsd  (+3 more)
bus/: CMakeLists.txt  h9frame.cc  h9frame.h  h9framecomparator.cc  h9framecomparator.h
cmake/: FindReadline.cmake  GitVersionDetect.cmake
common/: CMakeLists.txt  clientctx.cc  clientctx.h  ctx.cc  ctx.h  daemonctx.cc  daemonctx.h  devicedescloader.cc  devicedescloader.h  h9_log.c  h9tuple.cc  h9tuple.h  h9value.cc  h9value.h  log.cc  log.h  logger.cc  logger.h  valuetypes.cc  valuetypes.h
conf/: dev.conf  devices.conf  h9.conf  h9bus.conf  h9d.conf  h9d.ratatosk.conf  nodes.conf
devices/: CMakeLists.txt  antennaswitch.cc  antennaswitch.h
doc/: Frame.md  bootloader.md
drivers/: CMakeLists.txt  driver.h  driverinterface.cc  driverinterface.h  dummy.cc  dummy.h  h9_dev.c  h9_dev.h  loop.c  loop.cc  loop.h  slcan.c  slcan.cc  slcan.h  socketcan.cc  socketcan.h
h9_devs/: h9_dev.c  loop.h  slcan.c  slcan.h
h9_endpoint/: endpoint.c  endpoint.h  loop.c  loop.h  slcan.c  slcan.h
h9bus/: CMakeLists.txt  busctx.cc  busctx.h  busframe.cc  busframe.h  busmgr.cc  busmgr.h  cfg.cc  cfg.h  driver.cc  driver.h  eventmgr.cc  eventmgr.h  framelogger.cc  framelogger.h  h9bus.cc  if_up.sh  servermgr.cc  servermgr.h  socketmgr.cc  socketmgr.h  tcpclient.cc  tcpclient.h  tcpserver.cc  tcpserver.h
h9cli/: CMakeLists.txt  abstractcommand.h  abstractexp.h  cliparser.cc  cliparser.h  commandctx.cc  commandctx.h  expression.cc  expression.h  h9cli.cc  lexer.l  lexer.ll  parser.yy
h9d/: CMakeLists.txt  bus.cc  bus.h  busobserver.cc  busobserver.h  connectionctx.cc  connectionctx.h  dctx.cc  dctx.h  device.cc  device.h  devmgr.cc  devmgr.h  epoll.cc  epoll.h  executor.cc  executor.h  executoradapter.cc  executoradapter.h  frameobserver.h  framesubject.cc  framesubject.h  h9d.cc  kqueue.cc  kqueue.h  node.cc  node.h  sharedmutex.cc  sharedmutex.h  tcpclientthread.cc  tcpclientthread.h  tcpserver.cc  tcpserver.h
h9fwu/: CMakeLists.txt  h9fwu.cc
h9send/: CMakeLists.txt  h9send.cc
h9sniffer/: CMakeLists.txt  h9sniffer.cc
h9spy/: CMakeLists.txt  h9spy.cc
h9stat/: CMakeLists.txt  h9stat  h9stat.cc
old/: h9_xmlmsg.c  h9_xmlsocket.c  h9d.c  h9d.cfg  h9d_cfg.c  h9d_client.c  h9d_client.h  h9d_endpoint.c  h9d_endpoint.h  h9d_metricses.c  h9d_select_event.c  h9d_server.c  h9d_server.h  h9d_trigger.c  h9d_trigger.h  h9fw.c  h9msg.h  h9send.c  h9spy.c  h9stats.cc
protocol/: CMakeLists.txt  callmsg.cc  callmsg.h  concretizemsg.h  deviceevent.cc  deviceevent.h  devicemethodresponsemsg.cc  devicemethodresponsemsg.h  errorcode.md  errormsg.cc  errormsg.h  executedevicemethodmsg.cc  executedevicemethodmsg.h  executemethodmsg.cc  executemethodmsg.h  framemsg.cc  framemsg.h  framereceivedmsg.cc  framereceivedmsg.h  genericframemsg.h  genericmethod.h  genericmsg.cc  genericmsg.h  h9connector.cc  h9connector.h  h9msg.xsd  h9msgsocket.cc  h9msgsocket.h  h9socket.cc  h9socket.h  identificationmsg.cc  identificationmsg.h  methodcallmsg.cc  methodcallmsg.h  methodresponsemsg.cc  methodresponsemsg.h  responsemsg.cc  responsemsg.h  sendframemsg.cc  sendframemsg.h  (+4 more)
scripts/: generate_git_version_header.py  if_up.sh
src/: CMakeLists.txt  antenna_switch_dev.cc  antenna_switch_dev.h  api.cc  api.h  bus.cc  bus.h  bus_driver.cc  bus_driver.h  bus_interface.cc  bus_interface.h  busframe.cc  busframe.h  cli_cache.cc  cli_cache.h  cli_lexer.l  cli_parser.y  cli_parsing_driver.cc  cli_parsing_driver.h  client_frame_obs.cc  client_frame_obs.h  command_executor.cc  command_executor.h  config.h  config.h.in  config_gen.h.in  dev.cc  dev.h  dev_loader.cc  dev_loader.h  dev_node_exception.cc  dev_node_exception.h  dev_status_observer.cc  dev_status_observer.h  device.cc  device.h  devicedescloader.cc  devicedescloader.h  devices_mgr.cc  devices_mgr.h  (+67 more)
systemd/: h9d.service
virtual_node/: antenna_switch_mock.py  rpi_gpio_node.py
