add_executable(h9cli h9cli.cc $<TARGET_OBJECTS:CTXCLIENT>)
target_include_directories(h9cli PUBLIC ${CONFUSE_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS} ${READLINE_INCLUDE_DIRS})
target_compile_options(h9cli PUBLIC ${CONFUSE_CFLAGS_OTHER} ${LIBXML2_CFLAGS_OTHER} ${READLINE_CFLAGS_OTHER})
target_link_libraries(h9cli ${CONFUSE_LIBRARIES} ${LIBXML2_LIBRARIES} ${READLINE_LIBRARIES})
